<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> and <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a>"
"<a href="http://forum.xda-developers.com/member.php?u=4756862">-BioHaZard-</a> and <a href="http://forum.xda-developers.com/member.php?u=5345056">dvdandroid</a> for bug fixes and Material Design</string>
    <string name="about_developers_label">Main developers</string>
    <string name="about_libraries_label">Used libraries</string>
    <string name="about_source">https://github.com/rovo89</string>
    <string name="about_source_label">Source code</string>
    <string name="about_support">http://forum.xda-developers.com/xposed</string>
    <string name="about_translator_label">Translator</string>
    <string name="about_version_label">Version</string>
    <string name="activate_and_reboot">Activate and reboot</string>
    <string name="activate_only">Activate only</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="android_sdk">Android %1$s (%2$s, API %3$d)</string>
    <string name="app_name">Xposed Húp</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_flash_note">%s should be flashed automatically once you press OK.</string>
    <string name="bookmark_added">Bookmark added</string>
    <string name="bookmark_removed">Bookmark removed</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="changes">Changes:</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chrome_custom_tabs">Chrome Custom Tabs</string>
    <string name="chrome_custom_tabs_summ">Open links in internal browser</string>
    <string name="countdown">%1$s (%2$d)</string>
    <string name="dexopt_now">Optimize apps now</string>
    <string name="done">Done!</string>
    <string name="dont_show_again">"Don't show this again"</string>
    <string name="download_author">by %s</string>
    <string name="download_could_not_read_file">Could not read downloaded file: %s</string>
    <string name="download_details_not_found">There is no module with package name \"%s\" in the repository.</string>
    <string name="download_details_page_description">Description</string>
    <string name="download_details_page_settings">Settings</string>
    <string name="download_details_page_versions">Versions</string>
    <string name="download_incorrect_package_name">Package name is incorrect (downloaded: %1$s, expected: %2$s)</string>
    <string name="download_md5sum_incorrect">MD5 sum is incorrect (downloaded: %1$s, expected: %2$s)</string>
    <string name="download_no_valid_apk">Downloaded file is not a valid APK (or incompatible)</string>
    <string name="download_no_versions">"The author hasn't uploaded anything yet."</string>
    <string name="download_progress">%1$,d / %2$,d kB</string>
    <string name="download_running">Download is running</string>
    <string name="download_section_24h">Last 24 hours</string>
    <string name="download_section_30d">Last 30 days</string>
    <string name="download_section_7d">Last 7 days</string>
    <string name="download_section_framework">Framework</string>
    <string name="download_section_installed">Installed</string>
    <string name="download_section_not_installed">Not installed</string>
    <string name="download_section_older">More than 30 days ago</string>
    <string name="download_section_update_available">Update available</string>
    <string name="download_sorting_created">Sort by creation date</string>
    <string name="download_sorting_status">Sort by status</string>
    <string name="download_sorting_title">Sorting order</string>
    <string name="download_sorting_updated">Sort by last update</string>
    <string name="download_status_installed">Installed (version %s)</string>
    <string name="download_status_update_available">Update available (version %1$s → %2$s)</string>
    <string name="download_test_version_not_shown">"A test version is available, however it isn't shown due to your global or module-specific settings."</string>
    <string name="download_timestamps">Added on %1$s · Updated on %2$s</string>
    <string name="download_unknown_author">unknown author</string>
    <string name="download_view_cancel">Cancel</string>
    <string name="download_view_download">Download</string>
    <string name="download_view_failed">Download failed (error %d)</string>
    <string name="download_view_install">Install</string>
    <string name="download_view_no_url">No download URL available</string>
    <string name="download_view_running">Download is running (%1$,d of %2$,d kB)</string>
    <string name="download_view_size">Size: %s KB</string>
    <string name="download_view_successful">Download successful</string>
    <string name="download_view_waiting">Download is waiting</string>
    <string name="export_">Export…</string>
    <string name="export_enabled_modules">Export enabled modules list</string>
    <string name="export_installed_modules">Export installed modules list</string>
    <string name="export_modules">Export enabled modules list</string>
    <string name="file_copy_failed">Could not copy %1$s to %2$s</string>
    <string name="file_copying">Copying %s…</string>
    <string name="file_create_directory_failed">Could not create directory %s</string>
    <string name="file_creating_directory">Creating directory %s…</string>
    <string name="file_done">Done! Changes will become active on reboot.</string>
    <string name="file_is_empty">File is empty</string>
    <string name="file_writing_recovery_command">Writing recovery command…</string>
    <string name="file_writing_recovery_command_failed">Writing recovery command failed. Please use a different installation method.</string>
    <string name="flash_error_default">Error %d occurred</string>
    <string name="flash_error_invalid_zip">Not a flashable ZIP file</string>
    <string name="flash_error_not_flashable_in_app">This file can only be flashed via recovery.</string>
    <string name="flash_error_shell_died">Execution aborted unexpectedly</string>
    <string name="flash_error_timeout">Timeout occurred</string>
    <string name="framework_active">Xposed Framework đã ngon lành ở phiên bản %s.</string>
    <string name="framework_delete">Delete downloaded file</string>
    <string name="framework_device_info">NEO HEHE</string>
    <string name="framework_install">Cài đặt</string>
    <string name="framework_install_recovery">Install via recovery</string>
    <string name="framework_no_zips">No matching ZIPs were found, it seems like your device is currently not supported.</string>
    <string name="framework_not_active">Xposed Framework version %s is installed, but not active. Please check the logs for details.</string>
    <string name="framework_not_installed">Xposed Framework đang đéo hoạt động.</string>
    <string name="framework_uninstall">Uninstall</string>
    <string name="framework_uninstall_recovery">Uninstall via recovery</string>
    <string name="framework_zip_load_failed">Could not load available ZIP files. Pull down to try again.</string>
    <string name="import_">Import…</string>
    <string name="import_enabled_modules">Import enabled modules list</string>
    <string name="import_installed_modules">Import installed modules list</string>
    <string name="import_modules">Import enabled modules list</string>
    <string name="install_known_issue">There seems to be a known issue (\"%s\") with your ROM. Installing Xposed might not work or lead to severe problems. Click here for details about the issue.</string>
    <string name="install_remove">Install and remove</string>
    <string name="install_update">Múc vào máy</string>
    <string name="install_warning">"Fake device để lừa đảo là hành vi vi phạm pháp luật nghiêm trọng ! HÃY DỪNG LẠI.

If you never heard about \"soft brick\" and \"bootloop\" before or if you don't know how to recover from such a situation, do "<b>NOT</b>" install Xposed!

In any case, having a recent backup is highly recommended."</string>
    <string name="install_warning_title">bị can Tiến Luật !</string>
    <string name="installer_needs_update">%1$s needs to be updated</string>
    <string name="known_issue_missing_base_directory">missing base directory</string>
    <string name="known_issue_wrong_base_directory">wrong base directory: %1$s</string>
    <string name="nav_item_about">About</string>
    <string name="nav_item_download">Download</string>
    <string name="nav_item_install">Framework</string>
    <string name="nav_item_logs">Logs</string>
    <string name="nav_item_modules">Modules</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_support">Support</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_recovery">Reboot to recovery</string>
    <string name="settings_default_view">Default view</string>
    <string name="settings_disable_resources">Disabled resource hooks</string>
    <string name="settings_disable_resources_summary">"Workaround for conflicts with theming engines
"<b>WARNING:</b> Modules which try to change resources will not work when this is enabled.</string>
    <string name="settings_group_app">Application</string>
    <string name="settings_group_download">Download</string>
    <string name="settings_group_experimental">Experimental</string>
    <string name="settings_release_type">Versions to be shown</string>
    <string name="settings_theme">Theme</string>
    <string name="show_outdated">Show outdated versions</string>
    <string name="soft_reboot">Soft reboot</string>
    <string name="translator" />
</resources>