<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/settings_group_download" android:key="group_download">
        <de.robv.android.xposed.installer.widget.ListPreferenceSummaryFix android:entries="@array/release_type_texts" android:title="@string/settings_release_type" android:key="release_type_global" android:summary="%s" android:defaultValue="stable" android:entryValues="@array/release_type_values" app:useStockLayout="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_group_app" android:key="group_app">
        <de.robv.android.xposed.installer.widget.IntegerListPreference android:entries="@array/theme_texts" android:title="@string/settings_theme" android:key="theme" android:summary="%s" android:defaultValue="0" android:entryValues="@array/theme_values" app:useStockLayout="true" />
        <de.robv.android.xposed.installer.widget.IntegerListPreference android:entries="@array/default_view_texts" android:title="@string/settings_default_view" android:key="default_view" android:summary="%s" android:defaultValue="0" android:entryValues="@array/default_view_values" app:useStockLayout="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_group_experimental" android:key="group_experimental">
        <CheckBoxPreference android:persistent="false" android:title="@string/settings_disable_resources" android:key="disable_resources" android:summary="@string/settings_disable_resources_summary" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>