<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/menu_reboot">
        <item android:icon="@drawable/ic_menu_refresh" android:id="@id/reboot" android:title="@string/reboot" />
        <item android:icon="@drawable/ic_menu_refresh" android:id="@id/soft_reboot" android:title="@string/soft_reboot" />
        <item android:icon="@drawable/ic_menu_refresh" android:id="@id/reboot_recovery" android:title="@string/reboot_recovery" />
    </group>
    <item android:icon="@drawable/ic_flash" android:id="@id/dexopt_now" android:title="@string/dexopt_now" />
    <group android:id="@id/menu_framework_download">
        <item android:id="@id/show_outdated" android:title="@string/show_outdated" android:checkable="true" />
    </group>
</menu>